--- a/homework/style.css
+++ b/homework/style.css
@@ -292,7 +292,7 @@ input[type=checkbox]:checked + .label-text{
 
 #lastSaved {
     margin-top: 16px;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: normal;
     color: grey;
   }
